[gd_scene load_steps=2 format=3 uid="uid://byj54f6m7ncql"]

[ext_resource type="Script" path="res://scripts/activities/Flashcard.gd" id="1"]

[node name="Flashcard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "New Word!"
horizontal_alignment = 1

[node name="WordLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 56
theme_override_colors/font_color = Color(0.2, 0.4, 0.8, 1)
text = "Word"
horizontal_alignment = 1

[node name="DefinitionLabel" type="Label" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(700, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Definition goes here"
horizontal_alignment = 1
autowrap_mode = 3

[node name="ExampleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(700, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(0.4, 0.4, 0.4, 1)
text = "Example sentence"
horizontal_alignment = 1
autowrap_mode = 3

[node name="ContinueButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 22
text = "Got it!"
